--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -49,8 +49,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=23
-javac.target=23
+javac.source=21
+javac.target=21
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -76,7 +76,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=DulceHogar
-main.class=dulcehogar.vistas.paginaInicio
+main.class=com.grupo11.dulcehogar.s3.vistas.paginaInicio
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
