Agregar login nueva tabla Usuario

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -76,7 +76,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=DulceHogar
-main.class=com.grupo11.dulcehogar.s3.vistas.paginaInicio
+main.class=com.grupo11.dulcehogar.s3.vistas.LoginVista
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
